# minigene_design

./: .gitignore  README.md  pyproject.toml
.github/workflows/: formatting.yaml  tests.yaml
examples/: jupyternotebook_manual.ipynb  jupyternotebook_simple.ipynb  zero.py
scripts/: _utils.py  generate_sequences.py  real_run.ipynb  real_run_test_data.ipynb  workbook2.ipynb
scripts/archive/: _workbook.py  check_results.py  clean_up_files.py  test.ipynb  tsv_3.py  tsv_4.py  tsv_5.py  tsv_6.py  tsv_7.py  tsv_8.py  wesmRNA_batchFile_fastq.csv  workbook.ipynb
src/minigene_design/: __init__.py  _generate_sequences.py  _utils.py
test/: process_test_data.py  test_hc_vep.txt  test_minigene.py
